@@ -1,5 +1,10 @@
 2016-07-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
+	* field.c (rebuild_record): Do not bother to create new field nodes
+	to replace malloc'ed nodes when rebuilding $0.
+
+2016-07-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
 	* awk.h (FIELD): Remove unnecessary flag.
 	(MALLOC): Move definition to join the others, and improve the comment.
 	* array.c (value_info): Replace FIELD test with MALLOC test.
